nestum/tests/ui/fail_enum_args.rs
use nestum::nestum;

#[nestum(foo = "bar")]
pub enum Enum1 {
    A,
}

fn main() {}
